distance measureing tool usable

--- a/src/gui/MainWindow.ui
+++ b/src/gui/MainWindow.ui
@@ -169,6 +169,8 @@
         <widget class="QToolBar" name="viewerToolBar">
          <addaction name="designActionPreview"/>
          <addaction name="designActionRender"/>
+         <addaction name="designActionMeasureDist"/>
+         <addaction name="designActionMeasureAngle"/>
          <addaction name="separator"/>
          <addaction name="viewActionViewAll"/>
          <addaction name="viewActionZoomIn"/>
@@ -310,6 +312,8 @@
     <addaction name="designActionPreview"/>
     <addaction name="designActionRender"/>
     <addaction name="designAction3DPrint"/>
+    <addaction name="designActionMeasureDist"/>
+    <addaction name="designActionMeasureAngle"/>
     <addaction name="separator"/>
     <addaction name="designCheckValidity"/>
     <addaction name="designActionDisplayAST"/>
@@ -981,6 +985,22 @@
    </property>
    <property name="shortcut">
     <string>F8</string>
+   </property>
+  </action>
+  <action name="designActionMeasureDist">
+   <property name="text">
+    <string>Measure &amp;Distance</string>
+   </property>
+   <property name="shortcut">
+    <string>d</string>
+   </property>
+  </action>
+  <action name="designActionMeasureAngle">
+   <property name="text">
+    <string>Measure &amp;Angle</string>
+   </property>
+   <property name="shortcut">
+    <string>a</string>
    </property>
   </action>
   <action name="designCheckValidity">
