calculating volume and surface

--- a/src/gui/Preferences.ui
+++ b/src/gui/Preferences.ui
@@ -2321,6 +2321,13 @@
                  </property>
                 </widget>
                </item>
+               <item>
+                <widget class="QCheckBox" name="checkBoxSummaryVolume">
+                 <property name="text">
+                  <string>Measurements: Volume</string>
+                 </property>
+                </widget>
+               </item>
               </layout>
              </widget>
             </item>
