--- a/src/gui/MainWindow.ui
+++ b/src/gui/MainWindow.ui
@@ -232,6 +232,7 @@
      <addaction name="fileActionExportOBJ"/>
      <addaction name="fileActionExportOFF"/>
      <addaction name="fileActionExportWRL"/>
+     <addaction name="fileActionExportFoldable"/>
      <addaction name="fileActionExportAMF"/>
      <addaction name="fileActionExport3MF"/>
      <addaction name="fileActionExportDXF"/>
@@ -1051,6 +1052,11 @@
   <action name="fileActionExportWRL">
    <property name="text">
     <string>Export as &amp;WRL...</string>
+   </property>
+  </action>
+  <action name="fileActionExportFoldable">
+   <property name="text">
+    <string>Export as &amp;Foldable PS...</string>
    </property>
   </action>
   <action name="viewActionPreview">
