--- a/src/gui/PrintInitDialog.ui
+++ b/src/gui/PrintInitDialog.ui
@@ -113,6 +113,19 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="CuraButton">
+        <property name="text">
+         <string>Send to CURA</string>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="autoExclusive">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
