--- a/src/gui/Preferences.ui
+++ b/src/gui/Preferences.ui
@@ -1581,6 +1581,33 @@
          </widget>
         </item>
         <item>
+         <widget class="QGroupBox" name="groupBoxLocalSlicer">
+          <property name="title">
+           <string>Local Slicer</string>
+          </property>
+	  <layout class="QGridLayout" name="gridLayout_72">
+
+          <item row="0" column="0">
+            <widget class="QLabel" name="labelLocalSlicer">
+             <property name="text">
+              <string>Executable name</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="QLineEdit" name="lineEditLocalSlicer">
+             <property name="placeholderText">
+		     <string notr="true">Local slicer path</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
          <spacer name="verticalSpacer3DPrint">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
