added "New Python" Button

--- a/src/gui/LaunchingScreen.ui
+++ b/src/gui/LaunchingScreen.ui
@@ -80,6 +80,37 @@ QPushButton:pressed {
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="pushButtonNewPython">
+           <property name="styleSheet">
+            <string notr="true">QPushButton {
+    margin: 0;
+    padding: 4px;
+    color: white;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #82dd97, stop: 1 #2a833f);
+    border-radius: 2px;
+}
+QPushButton:hover {
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #92eda7, stop: 1 #3a934f);
+}
+QPushButton:disabled {
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #dfdfdf, stop: 1 #aeaeae);
+}
+QPushButton:pressed {
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #2a833f, stop: 1 #82dd97);
+}</string>
+           </property>
+           <property name="text">
+            <string>Python</string>
+           </property>
+           <property name="default">
+            <bool>true</bool>
+           </property>
+           <property name="flat">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="pushButtonOpen">
            <property name="styleSheet">
             <string notr="true">QPushButton {
